# libbfoverlay

./: .codecov.yml  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libbfoverlay.ini  libbfoverlay.pc.in  libbfoverlay.spec.in  synclibs.ps1  synclibs.sh
bfoverlaytools/: Makefile.am  bfoverlaymount.c  bfoverlaytools_getopt.c  bfoverlaytools_getopt.h  bfoverlaytools_i18n.h  bfoverlaytools_libbfio.h  bfoverlaytools_libbfoverlay.h  bfoverlaytools_libcdata.h  bfoverlaytools_libcerror.h  bfoverlaytools_libclocale.h  bfoverlaytools_libcnotify.h  bfoverlaytools_libcpath.h  bfoverlaytools_libuna.h  bfoverlaytools_output.c  bfoverlaytools_output.h  bfoverlaytools_signal.c  bfoverlaytools_signal.h  bfoverlaytools_unused.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h
common/: config_winapi.h
dpkg/: changelog.in  control  copyright  rules
include/: Makefile.am  libbfoverlay.h.in
include/libbfoverlay/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libbfoverlay/: Makefile.am  bfoverlay_cow_allocation_table_block.h  bfoverlay_cow_file_header.h  libbfoverlay.c  libbfoverlay.rc.in  libbfoverlay_codepage.h  libbfoverlay_cow_allocation_table.c  libbfoverlay_cow_allocation_table.h  libbfoverlay_cow_allocation_table_block.c  libbfoverlay_cow_allocation_table_block.h  libbfoverlay_cow_file.c  libbfoverlay_cow_file.h  libbfoverlay_cow_file_header.c  libbfoverlay_cow_file_header.h  libbfoverlay_definitions.h.in  libbfoverlay_descriptor_file.c  libbfoverlay_descriptor_file.h  libbfoverlay_error.c  libbfoverlay_error.h  libbfoverlay_extern.h  libbfoverlay_handle.c  libbfoverlay_handle.h  libbfoverlay_layer.c  libbfoverlay_layer.h  libbfoverlay_libbfio.h  libbfoverlay_libcdata.h  libbfoverlay_libcerror.h  libbfoverlay_libcfile.h  libbfoverlay_libclocale.h  libbfoverlay_libcnotify.h  libbfoverlay_libcthreads.h  libbfoverlay_libfvalue.h  libbfoverlay_libuna.h  libbfoverlay_notify.c  libbfoverlay_notify.h  libbfoverlay_range.c  libbfoverlay_range.h  libbfoverlay_support.c  libbfoverlay_support.h  libbfoverlay_types.h  (+1 more)
m4/: yaltools.m4
manuals/: Makefile.am  bfoverlaymount.1  libbfoverlay.3
msvscpp/: Makefile.am  libbfoverlay.sln
msvscpp/bfoverlay_test_cow_allocation_table/: bfoverlay_test_cow_allocation_table.vcproj
msvscpp/bfoverlay_test_cow_allocation_table_block/: bfoverlay_test_cow_allocation_table_block.vcproj
msvscpp/bfoverlay_test_cow_file/: bfoverlay_test_cow_file.vcproj
msvscpp/bfoverlay_test_cow_file_header/: bfoverlay_test_cow_file_header.vcproj
msvscpp/bfoverlay_test_descriptor_file/: bfoverlay_test_descriptor_file.vcproj
msvscpp/bfoverlay_test_error/: bfoverlay_test_error.vcproj
msvscpp/bfoverlay_test_handle/: bfoverlay_test_handle.vcproj
msvscpp/bfoverlay_test_layer/: bfoverlay_test_layer.vcproj
msvscpp/bfoverlay_test_notify/: bfoverlay_test_notify.vcproj
msvscpp/bfoverlay_test_range/: bfoverlay_test_range.vcproj
msvscpp/bfoverlay_test_support/: bfoverlay_test_support.vcproj
msvscpp/bfoverlay_test_tools_output/: bfoverlay_test_tools_output.vcproj
msvscpp/bfoverlay_test_tools_signal/: bfoverlay_test_tools_signal.vcproj
msvscpp/bfoverlaymount/: bfoverlaymount.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libbfoverlay/: libbfoverlay.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libuna/: libuna.vcproj
po/: ChangeLog
tests/: Makefile.am  bfoverlay_test_cow_allocation_table.c  bfoverlay_test_cow_allocation_table_block.c  bfoverlay_test_cow_file.c  bfoverlay_test_cow_file_header.c  bfoverlay_test_descriptor_file.c  bfoverlay_test_error.c  bfoverlay_test_functions.c  bfoverlay_test_functions.h  bfoverlay_test_getopt.c  bfoverlay_test_getopt.h  bfoverlay_test_handle.c  bfoverlay_test_layer.c  bfoverlay_test_libbfio.h  bfoverlay_test_libbfoverlay.h  bfoverlay_test_libcerror.h  bfoverlay_test_libclocale.h  bfoverlay_test_libcnotify.h  bfoverlay_test_libuna.h  bfoverlay_test_macros.h  bfoverlay_test_memory.c  bfoverlay_test_memory.h  bfoverlay_test_notify.c  bfoverlay_test_range.c  bfoverlay_test_support.c  bfoverlay_test_tools_output.c  bfoverlay_test_tools_signal.c  bfoverlay_test_unused.h  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_runner.sh  test_tools.at  test_tools.ps1  test_tools.sh
tests/data/: descriptor_file.1
