include_HEADERS = \
	libbfoverlay.h

pkginclude_HEADERS = \
	libbfoverlay/codepage.h \
	libbfoverlay/definitions.h \
	libbfoverlay/error.h \
	libbfoverlay/extern.h \
	libbfoverlay/features.h \
	libbfoverlay/types.h

EXTRA_DIST = \
	libbfoverlay.h.in \
	libbfoverlay/definitions.h.in \
	libbfoverlay/features.h.in \
	libbfoverlay/types.h.in

DISTCLEANFILES = \
	libbfoverlay.h \
	libbfoverlay/definitions.h \
	libbfoverlay/features.h \
	libbfoverlay/types.h \
	Makefile \
	Makefile.in

