MSVSCPP_FILES = \
	bfoverlay_test_cow_allocation_table_block/bfoverlay_test_cow_allocation_table_block.vcproj \
	bfoverlay_test_cow_file/bfoverlay_test_cow_file.vcproj \
	bfoverlay_test_cow_file_header/bfoverlay_test_cow_file_header.vcproj \
	bfoverlay_test_descriptor_file/bfoverlay_test_descriptor_file.vcproj \
	bfoverlay_test_error/bfoverlay_test_error.vcproj \
	bfoverlay_test_handle/bfoverlay_test_handle.vcproj \
	bfoverlay_test_layer/bfoverlay_test_layer.vcproj \
	bfoverlay_test_notify/bfoverlay_test_notify.vcproj \
	bfoverlay_test_range/bfoverlay_test_range.vcproj \
	bfoverlay_test_support/bfoverlay_test_support.vcproj \
	bfoverlay_test_tools_output/bfoverlay_test_tools_output.vcproj \
	bfoverlay_test_tools_signal/bfoverlay_test_tools_signal.vcproj \
	bfoverlaymount/bfoverlaymount.vcproj \
	libbfio/libbfio.vcproj \
	libbfoverlay/libbfoverlay.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libbfoverlay.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

